--- a/index.html
+++ b/index.html
@@ -40,8 +40,8 @@
 
 				<!-- Banner -->
 					<section id="banner">
-						<div class="inner">
-							<h2>Monarchist</h2>
+						<div class="inner logo">
+							<img src="images/monarchist_logo.png" alt="" />
 						</div>
 						<a href="#one" class="more scrolly"></a>
 					</section>
@@ -50,10 +50,7 @@
 					<section id="one" class="wrapper style1 special">
 						<div class="inner">
 							<header class="major">
-								<h2>Arcu aliquet vel lobortis ata nisl<br />
-								eget augue amet aliquet nisl cep donec</h2>
-								<p>Aliquam ut ex ut augue consectetur interdum. Donec amet imperdiet eleifend<br />
-								fringilla tincidunt. Nullam dui leo Aenean mi ligula, rhoncus ullamcorper.</p>
+								<h2>Debut Album CELL now available<br> on all streaming platforms</h2>
 							</header>
 							<ul class="icons major">
 								<li><span class="icon fa-gem major style1"><span class="label">Lorem</span></span></li>
@@ -61,32 +58,46 @@
 								<li><span class="icon solid fa-code major style3"><span class="label">Dolor</span></span></li>
 							</ul>
 						</div>
+						<a href="#one" class="more scrolly"></a>
 					</section>
 
 				<!-- Two -->
-					<section id="two" class="wrapper alt style2">
-						<section class="spotlight">
-							<div class="image"><img src="images/pic01.jpg" alt="" /></div><div class="content">
-								<h2>Magna primis lobortis<br />
-								sed ullamcorper</h2>
-								<p>Aliquam ut ex ut augue consectetur interdum. Donec hendrerit imperdiet. Mauris eleifend fringilla nullam aenean mi ligula.</p>
-							</div>
+						<section class="tiles">
+							<article class="style1">
+								<span class="image">
+									<img src="images/tempsnip.png" alt="" />
+								</span>
+								<a href="generic.html">
+									<h2>Magna</h2>
+									<div class="content">
+										<p>Sed nisl arcu euismod sit amet nisi lorem etiam dolor veroeros et feugiat.</p>
+									</div>
+								</a>
+							</article>
+							<article class="style1">
+								<span class="image">
+									<img src="images/tempsnip2.png" alt="" />
+								</span>
+								<a href="generic.html">
+									<h2>Lorem</h2>
+									<div class="content">
+										<p>Sed nisl arcu euismod sit amet nisi lorem etiam dolor veroeros et feugiat.</p>
+									</div>
+								</a>
+							</article>
+							<article class="style1">
+								<span class="image">
+									<img src="images/tempsnip3.png" alt="" />
+								</span>
+								<a href="generic.html">
+									<h2>Lorem</h2>
+									<div class="content">
+										<p>Sed nisl arcu euismod sit amet nisi lorem etiam dolor veroeros et feugiat.</p>
+									</div>
+								</a>
+							</article>
 						</section>
-						<section class="spotlight">
-							<div class="image"><img src="images/pic02.jpg" alt="" /></div><div class="content">
-								<h2>Tortor dolore feugiat<br />
-								elementum magna</h2>
-								<p>Aliquam ut ex ut augue consectetur interdum. Donec hendrerit imperdiet. Mauris eleifend fringilla nullam aenean mi ligula.</p>
-							</div>
-						</section>
-						<section class="spotlight">
-							<div class="image"><img src="images/pic03.jpg" alt="" /></div><div class="content">
-								<h2>Augue eleifend aliquet<br />
-								sed condimentum</h2>
-								<p>Aliquam ut ex ut augue consectetur interdum. Donec hendrerit imperdiet. Mauris eleifend fringilla nullam aenean mi ligula.</p>
-							</div>
-						</section>
-					</section>
+
 
 				<!-- Three -->
 					<section id="three" class="wrapper style3 special">
