--- a/index.html
+++ b/index.html
@@ -5,102 +5,143 @@
 	Free for personal and commercial use under the CCA 3.0 license (html5up.net/license)
 -->
 <html>
-	<head>
-		<title>Spectral by HTML5 UP</title>
-		<meta charset="utf-8" />
-		<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
-		<link rel="stylesheet" href="assets/css/main.css" />
-		<noscript><link rel="stylesheet" href="assets/css/noscript.css" /></noscript>
-	</head>
-	<body class="landing is-preload">
 
-		<!-- Page Wrapper -->
-			<div id="page-wrapper">
+<head>
+	<title>Spectral by HTML5 UP</title>
+	<meta charset="utf-8" />
+	<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
+	<link rel="stylesheet" href="assets/css/main.css" />
+	<noscript>
+		<link rel="stylesheet" href="assets/css/noscript.css" />
+	</noscript>
+</head>
 
-				<!-- Header -->
-					<header id="header" class="alt">
-						<h1><a href="index.html">Spectral</a></h1>
-						<nav id="nav">
+<body class="landing is-preload">
+
+	<!-- Page Wrapper -->
+	<div id="page-wrapper">
+
+		<!-- Header -->
+		<header id="header" class="alt">
+			<h1><a href="index.html">Spectral</a></h1>
+			<nav id="nav">
+				<ul>
+					<li class="special">
+						<a href="#menu" class="menuToggle"><span>Menu</span></a>
+						<div id="menu">
 							<ul>
-								<li class="special">
-									<a href="#menu" class="menuToggle"><span>Menu</span></a>
-									<div id="menu">
-										<ul>
-											<li><a href="index.html">Home</a></li>
-											<li><a href="generic.html">News</a></li>
-											<li><a href="elements.html">Merch</a></li>
-											<li><a href="elements.html">Band</a></li>
-											<li><a href="elements.html">Gigs</a></li>
-										</ul>
-									</div>
-								</li>
-							</ul>
-						</nav>
-					</header>
-
-				<!-- Banner -->
-					<section id="banner">
-						<div class="inner logo">
-							<img src="images/monarchist_logo.png" alt="" />
-						</div>
-						<a href="#one" class="more scrolly"></a>
-					</section>
-
-				<!-- One -->
-					<section id="one" class="wrapper style1 special">
-						<div class="inner">
-							<header class="major">
-								<h2>Debut Album CELL now available<br> on all streaming platforms</h2>
-							</header>
-							<ul class="icons major">
-								<li><span class="icon fa-gem major style1"><span class="label">Lorem</span></span></li>
-								<li><span class="icon fa-heart major style2"><span class="label">Ipsum</span></span></li>
-								<li><span class="icon solid fa-code major style3"><span class="label">Dolor</span></span></li>
+								<li><a href="index.html">Home</a></li>
+								<li><a href="generic.html">News</a></li>
+								<li><a href="elements.html">Merch</a></li>
+								<li><a href="elements.html">Band</a></li>
+								<li><a href="elements.html">Gigs</a></li>
 							</ul>
 						</div>
-						<a href="#one" class="more scrolly"></a>
-					</section>
+					</li>
+				</ul>
+			</nav>
+		</header>
 
-				<!-- Two -->
-						<section class="tiles">
-							<article class="style1">
-								<span class="image">
-									<img src="images/tempsnip.png" alt="" />
-								</span>
-								<a href="generic.html">
-									<h2>Magna</h2>
-									<div class="content">
-										<p>Sed nisl arcu euismod sit amet nisi lorem etiam dolor veroeros et feugiat.</p>
-									</div>
-								</a>
-							</article>
-							<article class="style1">
-								<span class="image">
-									<img src="images/tempsnip2.png" alt="" />
-								</span>
-								<a href="generic.html">
-									<h2>Lorem</h2>
-									<div class="content">
-										<p>Sed nisl arcu euismod sit amet nisi lorem etiam dolor veroeros et feugiat.</p>
-									</div>
-								</a>
-							</article>
-							<article class="style1">
-								<span class="image">
-									<img src="images/tempsnip3.png" alt="" />
-								</span>
-								<a href="generic.html">
-									<h2>Lorem</h2>
-									<div class="content">
-										<p>Sed nisl arcu euismod sit amet nisi lorem etiam dolor veroeros et feugiat.</p>
-									</div>
-								</a>
-							</article>
-						</section>
+		<!-- Banner -->
+		<section id="banner">
+			<div class="inner logo">
+				<img src="images/monarchist_logo.png" alt="" />
+			</div>
+			<a class="more scrolly"></a>
+		</section>
+
+		<!-- One -->
+				<!-- <header class="major">
+					<h2>Debut Album CELL now available<br> on all streaming platforms</h2>
+				</header>
+				<ul class="icons major">
+					<li><span class="icon fa-gem major style1"><span class="label">Lorem</span></span></li>
+					<li><span class="icon fa-heart major style2"><span class="label">Ipsum</span></span></li>
+					<li><span class="icon solid fa-code major style3"><span class="label">Dolor</span></span></li>
+				</ul> -->
+
+		<section id="video">
+			<video autoplay muted loop>
+				<source src="images/music_video.mp4" type="video/mp4">
+			</video>
+			<div class="content">
+				<p>DEBUT ALBUM OUT NOW</p>
+				<a href="#" class="button fit">Listen</a>
+			</div>
+			
+	</section>
 
 
-				<!-- Three -->
-					<section id="three" class="wrapper style3 special">
+
+		<!-- Two -->
+		
+		<section class="tiles">
+			<header>
+				<h2>Merch</h2>
+			</header>
+			<article class="style1">
+				<span class="image">
+					<img src="images/tempsnip.png" alt="" />
+				</span>
+				<a href="generic.html">
+				
+					<div class="content">
+						<p class="white">Days on the Sun Shirt - White T-Shirt/Shirt</p>
+					</div>
+				</a>
+			</article>
+			<article class="style1">
+				<span class="image">
+					<img src="images/tempsnip2.png" alt="" />
+				</span>
+				<a href="generic.html">
+					<div class="content">
+						<p class="black"> Days on the Sun Shirt - Black T-Shirt/Shirt</p>
+					</div>
+				</a>
+			</article>
+			<article class="style1">
+				<span class="image">
+					<img src="images/tempsnip3.png" alt="" />
+				</span>
+				<a href="generic.html">
+					<div class="content">
+						<p class="white"> Poster</p>
+					</div>
+				</a>
+			</article>
+		</section>
+
+		<section class="spotlight" id="first">
+			<div class="content">
+				<p>Heavy riffs, melodic hooks, clean baritone vocals - this is probably the most suitable way to describe the music of German quartet MONARCHIST. Going back to the pioneers of metal music and putting a modern melodic spin on it by injecting influences from the broad spectrum of today's music, all while striving innovation, makes MONARCHIST a true 2020's heavy rock band. Most songs deal with the mannerisms and flaws of mankind, whether in form of social commentary, or self-reflection. For the new generation of fans of Black Sabbath, Metallica, Ghost, Iron Maiden, Rammstein, and more.</p>
+
+			</div>
+			<div class="image">
+				<img src="images/monarchist_photo.jpg" alt="" />
+			</div>
+		</section>
+
+		<section class="shows style1">
+			<header>
+				<h2>Shows</h2>
+			</header>
+			<table>
+				<tbody>
+					<tr>
+						<td>Release Show</td>
+						<td>09-07-2022</td>
+						<td>Düsseldorf</td>
+
+					</tr>
+				</tbody>
+			</table>
+			
+		</section>
+
+
+		<!-- Three -->
+		<!-- <section id="three" class="wrapper style3 special">
 						<div class="inner">
 							<header class="major">
 								<h2>Accumsan mus tortor nunc aliquet</h2>
@@ -134,10 +175,10 @@
 								</li>
 							</ul>
 						</div>
-					</section>
+					</section> -->
 
-				<!-- CTA -->
-					<section id="cta" class="wrapper style4">
+		<!-- CTA -->
+		<!-- <section id="cta" class="wrapper style4">
 						<div class="inner">
 							<header>
 								<h2>Arcue ut vel commodo</h2>
@@ -149,31 +190,33 @@
 							</ul>
 						</div>
 					</section>
+ -->
+		<!-- Footer -->
+		<footer id="footer">
+			<ul class="icons">
+				<li><a href="#" class="icon brands fa-twitter"><span class="label">Twitter</span></a></li>
+				<li><a href="#" class="icon brands fa-facebook-f"><span class="label">Facebook</span></a></li>
+				<li><a href="#" class="icon brands fa-instagram"><span class="label">Instagram</span></a></li>
+				<li><a href="#" class="icon brands fa-dribbble"><span class="label">Dribbble</span></a></li>
+				<li><a href="#" class="icon solid fa-envelope"><span class="label">Email</span></a></li>
+			</ul>
+			<ul class="copyright">
+				<li>&copy; Monarchist</li>
+				<li>Design by Amin Dada based on <a href="http://html5up.net">HTML5 UP</a></li>
+			</ul>
+		</footer>
 
-				<!-- Footer -->
-					<footer id="footer">
-						<ul class="icons">
-							<li><a href="#" class="icon brands fa-twitter"><span class="label">Twitter</span></a></li>
-							<li><a href="#" class="icon brands fa-facebook-f"><span class="label">Facebook</span></a></li>
-							<li><a href="#" class="icon brands fa-instagram"><span class="label">Instagram</span></a></li>
-							<li><a href="#" class="icon brands fa-dribbble"><span class="label">Dribbble</span></a></li>
-							<li><a href="#" class="icon solid fa-envelope"><span class="label">Email</span></a></li>
-						</ul>
-						<ul class="copyright">
-							<li>&copy; Untitled</li><li>Design: <a href="http://html5up.net">HTML5 UP</a></li>
-						</ul>
-					</footer>
+	</div>
 
-			</div>
+	<!-- Scripts -->
+	<script src="assets/js/jquery.min.js"></script>
+	<script src="assets/js/jquery.scrollex.min.js"></script>
+	<script src="assets/js/jquery.scrolly.min.js"></script>
+	<script src="assets/js/browser.min.js"></script>
+	<script src="assets/js/breakpoints.min.js"></script>
+	<script src="assets/js/util.js"></script>
+	<script src="assets/js/main.js"></script>
 
-		<!-- Scripts -->
-			<script src="assets/js/jquery.min.js"></script>
-			<script src="assets/js/jquery.scrollex.min.js"></script>
-			<script src="assets/js/jquery.scrolly.min.js"></script>
-			<script src="assets/js/browser.min.js"></script>
-			<script src="assets/js/breakpoints.min.js"></script>
-			<script src="assets/js/util.js"></script>
-			<script src="assets/js/main.js"></script>
+</body>
 
-	</body>
 </html>
