Finish deskop version

--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
 	<div id="page-wrapper">
 
 		<!-- Header -->
-		<header id="header" class="alt">
+		<!-- <header id="header" class="alt">
 			<h1><a href="index.html">Spectral</a></h1>
 			<nav id="nav">
 				<ul>
@@ -40,12 +40,16 @@
 					</li>
 				</ul>
 			</nav>
-		</header>
+		</header> -->
 
 		<!-- Banner -->
 		<section id="banner">
 			<div class="inner logo">
 				<img src="images/monarchist_logo.png" alt="" />
+			</div>
+			<div class="content">
+				<p>DEBUT ALBUM OUT NOW</p>
+				<a href="https://distrokid.com/hyperfollow/monarchist/cosmos" target="_blank" class="button fit">Listen</a>
 			</div>
 			<a class="more scrolly"></a>
 		</section>
@@ -65,8 +69,8 @@
 				<source src="images/music_video.mp4" type="video/mp4">
 			</video>
 			<div class="content">
-				<p>DEBUT ALBUM OUT NOW</p>
-				<a href="#" class="button fit">Listen</a>
+				<p>Crystallized Music Video</p>
+				<a href="https://www.youtube.com/watch?v=FJy5m71r9SM" target="_blank" class="button fit">Watch</a>
 			</div>
 			
 	</section>
@@ -81,9 +85,9 @@
 			</header>
 			<article class="style1">
 				<span class="image">
-					<img src="images/tempsnip.png" alt="" />
+					<img src="images/shirt_beige.jpg" alt="" />
 				</span>
-				<a href="generic.html">
+				<a href="https://monarchist.bandcamp.com/merch/days-on-the-sun-shirt-beige" target="_blank">
 				
 					<div class="content">
 						<p class="white">Days on the Sun Shirt - White T-Shirt/Shirt</p>
@@ -92,34 +96,26 @@
 			</article>
 			<article class="style1">
 				<span class="image">
-					<img src="images/tempsnip2.png" alt="" />
+					<img src="images/shirt_black.jpg" alt="" />
 				</span>
-				<a href="generic.html">
+				<a href="https://monarchist.bandcamp.com/merch/days-on-the-sun-shirt-black" target="_blank">
 					<div class="content">
 						<p class="black"> Days on the Sun Shirt - Black T-Shirt/Shirt</p>
 					</div>
 				</a>
 			</article>
-			<article class="style1">
-				<span class="image">
-					<img src="images/tempsnip3.png" alt="" />
-				</span>
-				<a href="generic.html">
-					<div class="content">
-						<p class="white"> Poster</p>
-					</div>
-				</a>
-			</article>
+
 		</section>
 
 		<section class="spotlight" id="first">
+			<div class="image">
+				<img src="images/monarchist_photo.jpg" alt="" />
+			</div>
 			<div class="content">
 				<p>Heavy riffs, melodic hooks, clean baritone vocals - this is probably the most suitable way to describe the music of German quartet MONARCHIST. Going back to the pioneers of metal music and putting a modern melodic spin on it by injecting influences from the broad spectrum of today's music, all while striving innovation, makes MONARCHIST a true 2020's heavy rock band. Most songs deal with the mannerisms and flaws of mankind, whether in form of social commentary, or self-reflection. For the new generation of fans of Black Sabbath, Metallica, Ghost, Iron Maiden, Rammstein, and more.</p>
 
 			</div>
-			<div class="image">
-				<img src="images/monarchist_photo.jpg" alt="" />
-			</div>
+
 		</section>
 
 		<section class="shows style1">
@@ -194,11 +190,11 @@
 		<!-- Footer -->
 		<footer id="footer">
 			<ul class="icons">
-				<li><a href="#" class="icon brands fa-twitter"><span class="label">Twitter</span></a></li>
-				<li><a href="#" class="icon brands fa-facebook-f"><span class="label">Facebook</span></a></li>
-				<li><a href="#" class="icon brands fa-instagram"><span class="label">Instagram</span></a></li>
-				<li><a href="#" class="icon brands fa-dribbble"><span class="label">Dribbble</span></a></li>
-				<li><a href="#" class="icon solid fa-envelope"><span class="label">Email</span></a></li>
+				<li><a href="https://open.spotify.com/artist/3xToii8YAQacYLuvCppv8S?si=I8ewingjRXKzOVFEVaTCMQ" class="icon brands fa-spotify"><span class="label">Spotify</span></a></li>
+				<li><a href="https://www.instagram.com/monarchistband/" class="icon brands fa-instagram"><span class="label">Instagram</span></a></li>
+				<li><a href="https://monarchist.bandcamp.com/" class="icon brands fa-bandcamp"><span class="label">Bandcamp</span></a></li>
+				<li><a href="mailto:monarchistband@gmail.com" class="icon solid fa-envelope"><span class="label">Email</span></a></li>
+				<li><a href="https://www.youtube.com/c/Ren%C3%A9SchmitzMonarchist" class="icon brands fa-youtube"><span class="label">YouTube</span></a></li>
 			</ul>
 			<ul class="copyright">
 				<li>&copy; Monarchist</li>
