--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
 				<p>DEBUT ALBUM OUT NOW</p>
 				<a href="https://distrokid.com/hyperfollow/monarchist/cosmos" target="_blank" class="button fit">Listen</a>
 			</div>
-			<a class="more scrolly"></a>
+			<a href="#video" class="more scrolly"></a>
 		</section>
 
 		<!-- One -->
