add loading animation and lock page while loading

--- a/index.html
+++ b/index.html
@@ -18,6 +18,12 @@
 
 <body class="landing is-preload">
 
+	<div id="spinner">
+		<div class="loadingio-spinner-dual-ring"><div class="ldio-se93k9o5zk">
+			<div></div><div><div></div></div>
+			</div></div>
+		</div>
+
 	<!-- Page Wrapper -->
 	<div id="page-wrapper">
 
@@ -44,6 +50,7 @@
 
 		<!-- Banner -->
 		<section id="banner">
+			
 			<div class="inner logo">
 				<img src="images/monarchist_logo.png" alt="" />
 			</div>
@@ -113,7 +120,15 @@
 			</div>
 			<div class="content">
 				<p>Heavy riffs, melodic hooks, clean baritone vocals - this is probably the most suitable way to describe the music of German quartet MONARCHIST. Going back to the pioneers of metal music and putting a modern melodic spin on it by injecting influences from the broad spectrum of today's music, all while striving innovation, makes MONARCHIST a true 2020's heavy rock band. Most songs deal with the mannerisms and flaws of mankind, whether in form of social commentary, or self-reflection. For the new generation of fans of Black Sabbath, Metallica, Ghost, Iron Maiden, Rammstein, and more.</p>
+				<ul>
+					<li>Gabriel Rodríguez Obando</li>
+					<li>René Schmitz</li>
+					<li>Amin Dada</li>
+					<li>Nicolai Ehlenbeck</li>
 
+
+				</ul>
+				
 			</div>
 
 		</section>
