Adjust band member section

--- a/index.html
+++ b/index.html
@@ -116,19 +116,25 @@
 
 		<section class="spotlight" id="first">
 			<div class="image">
-				<img src="images/monarchist_photo.jpg" alt="" />
+				<img src="images/monarchist_photo_square.jpg" alt="" />
 			</div>
 			<div class="content">
-				<p>Heavy riffs, melodic hooks, clean baritone vocals - this is probably the most suitable way to describe the music of German quartet MONARCHIST. Going back to the pioneers of metal music and putting a modern melodic spin on it by injecting influences from the broad spectrum of today's music, all while striving innovation, makes MONARCHIST a true 2020's heavy rock band. Most songs deal with the mannerisms and flaws of mankind, whether in form of social commentary, or self-reflection. For the new generation of fans of Black Sabbath, Metallica, Ghost, Iron Maiden, Rammstein, and more.</p>
-				<ul>
-					<li>Gabriel Rodríguez Obando</li>
-					<li>René Schmitz</li>
-					<li>Amin Dada</li>
-					<li>Nicolai Ehlenbeck</li>
+				<p>Heavy riffs, melodic hooks, clean baritone vocals - this is probably the most suitable way to describe the music of German quartet MONARCHIST. Going back to the pioneers of metal music and putting a modern melodic spin on it by injecting influences from the broad spectrum of today's music, all while striving innovation, makes MONARCHIST a true 2020's heavy rock band. Most songs deal with the mannerisms and flaws of mankind, whether in form of social commentary, or self-reflection. For the new generation of fans of Black Sabbath, Metallica, Ghost, Iron Maiden, Rammstein, and more. </p>
 
-
-				</ul>
-				
+				<table>
+					<tr>
+						<td>Gabriel R. Obando</td>
+						<td>René Schmitz</td>
+						<td>Amin Dada</td>
+						<td>Nicolai Ehlenbeck</td>
+					</tr>
+					<tr>
+						<td>Drums</td>
+						<td>Vocals & Bass</td>
+						<td>Guitars</td>
+						<td>Guitars</td>
+					</tr>
+				</table>					
 			</div>
 
 		</section>
@@ -140,9 +146,9 @@
 			<table>
 				<tbody>
 					<tr>
-						<td>Release Show</td>
-						<td>09-07-2022</td>
-						<td>Düsseldorf</td>
+						<td class="text-right">Release Show</td>
+						<td>12-08-2022</td>
+						<td class="text-left">Düsseldorf</td>
 
 					</tr>
 				</tbody>
