--- a/index.html
+++ b/index.html
@@ -55,8 +55,8 @@
 				<img src="images/monarchist_logo.png" alt="" />
 			</div>
 			<div class="content">
-				<p>DEBUT ALBUM OUT NOW</p>
-				<a href="https://distrokid.com/hyperfollow/monarchist/cosmos" target="_blank" class="button fit">Listen</a>
+				<p>DEBUT ALBUM "COSMOS" OUT NOW</p>
+				<a href="https://songwhip.com/monarchist/cosmos" target="_blank" class="button fit">Listen</a>
 			</div>
 			<a href="#video" class="more scrolly"></a>
 		</section>
@@ -76,7 +76,7 @@
 
 			</video>
 			<div class="content">
-				<p>Crystallized Music Video</p>
+				<p>CRYSTALLIZED - Music Video</p>
 				<a href="https://www.youtube.com/watch?v=FJy5m71r9SM" target="_blank" class="button fit">Watch</a>
 			</div>
 			
