Add different name layout for mobile

--- a/index.html
+++ b/index.html
@@ -118,7 +118,7 @@
 			<div class="image">
 				<img src="images/monarchist_photo_square.jpg" alt="" />
 			</div>
-			<div class="content">
+			<div class="content desktop">
 				<p>Heavy riffs, melodic hooks, clean baritone vocals - this is probably the most suitable way to describe the music of German quartet MONARCHIST. Going back to the pioneers of metal music and putting a modern melodic spin on it by injecting influences from the broad spectrum of today's music, all while striving innovation, makes MONARCHIST a true 2020's heavy rock band. Most songs deal with the mannerisms and flaws of mankind, whether in form of social commentary, or self-reflection. For the new generation of fans of Black Sabbath, Metallica, Ghost, Iron Maiden, Rammstein, and more. </p>
 
 				<table>
@@ -135,6 +135,23 @@
 						<td>Guitars</td>
 					</tr>
 				</table>					
+			</div>
+			<div class="content mobile">
+				<table>
+					<tr>
+						<td>Gabriel R. Obando</td>
+						<td>René Schmitz</td>
+						<td>Amin Dada</td>
+						<td>Nicolai Ehlenbeck</td>
+					</tr>
+					<tr>
+						<td>Drums</td>
+						<td>Vocals & Bass</td>
+						<td>Guitars</td>
+						<td>Guitars</td>
+					</tr>
+				</table>
+				<p>Heavy riffs, melodic hooks, clean baritone vocals - this is probably the most suitable way to describe the music of German quartet MONARCHIST. Going back to the pioneers of metal music and putting a modern melodic spin on it by injecting influences from the broad spectrum of today's music, all while striving innovation, makes MONARCHIST a true 2020's heavy rock band. Most songs deal with the mannerisms and flaws of mankind, whether in form of social commentary, or self-reflection. For the new generation of fans of Black Sabbath, Metallica, Ghost, Iron Maiden, Rammstein, and more. </p>
 			</div>
 
 		</section>
