--- a/index.html
+++ b/index.html
@@ -72,7 +72,7 @@
 				</ul> -->
 
 		<section id="video">
-			<video autoplay muted loop>
+			<video autoplay muted loop playsinline>
 
 			</video>
 			<div class="content">
