--- a/index.html
+++ b/index.html
@@ -164,7 +164,7 @@
 				<tbody>
 					<tr>
 						<td class="text-right">Release Show</td>
-						<td>12-08-2022</td>
+						<td>TBA</td>
 						<td class="text-left">Düsseldorf</td>
 
 					</tr>
