--- a/index.html
+++ b/index.html
@@ -232,7 +232,7 @@
 				<li><a href="https://www.instagram.com/monarchistband/" class="icon brands fa-instagram"><span class="label">Instagram</span></a></li>
 				<li><a href="https://monarchist.bandcamp.com/" class="icon brands fa-bandcamp"><span class="label">Bandcamp</span></a></li>
 				<li><a href="mailto:monarchistband@gmail.com" class="icon solid fa-envelope"><span class="label">Email</span></a></li>
-				<li><a href="https://www.youtube.com/c/Ren%C3%A9SchmitzMonarchist" class="icon brands fa-youtube"><span class="label">YouTube</span></a></li>
+				<li><a href="https://www.youtube.com/watch?v=FJy5m71r9SM&list=PL4OAOMzHrkjxdTVMn_fdXSsuKzuC6yZm0" class="icon brands fa-youtube"><span class="label">YouTube</span></a></li>
 			</ul>
 			<ul class="copyright">
 				<li>&copy; Monarchist</li>
