--- a/index.html
+++ b/index.html
@@ -52,11 +52,12 @@
 		<section id="banner">
 			
 			<div class="inner logo">
-				<img src="images/monarchist_logo.png" alt="" />
+				<img src="images/ntts/monarchist_logo.png" alt="" />
 			</div>
 			<div class="content">
-				<p>DEBUT ALBUM "COSMOS" OUT NOW</p>
-				<a href="https://songwhip.com/monarchist/cosmos" target="_blank" class="button fit">Listen</a>
+				<img src="images/ntts/hourglass.png" alt="" />
+				<p>New EP “NO TIME TO SHINE” out march 16</p>
+				<a href="https://songwhip.com/monarchist/cosmos" target="_blank" class="button fit">Pre-Save</a>
 			</div>
 			<a href="#video" class="more scrolly"></a>
 		</section>
