ntts release update

--- a/index.html
+++ b/index.html
@@ -56,8 +56,8 @@
 			</div>
 			<div class="content">
 				<img src="images/ntts/hourglass.png" alt="" />
-				<p>New EP “NO TIME TO SHINE” out March 16</p>
-				<a href="https://distrokid.com/hyperfollow/monarchist/no-time-to-shine" target="_blank" class="button fit">Pre-Save</a>
+				<p>New EP “NO TIME TO SHINE” out now</p>
+				<a href="https://songwhip.com/monarchist/no-time-to-shine" target="_blank" class="button fit">Listen</a>
 			</div>
 			<a href="#video" class="more scrolly"></a>
 		</section>
