--- a/index.html
+++ b/index.html
@@ -77,8 +77,8 @@
 
 			</video>
 			<div class="content">
-				<p>CRYSTALLIZED - Music Video</p>
-				<a href="https://www.youtube.com/watch?v=FJy5m71r9SM" target="_blank" class="button fit">Watch</a>
+				<p>No Time To Shine - Music Video</p>
+				<a href="https://www.youtube.com/watch?v=LAAUS2pFVnU" target="_blank" class="button fit">Watch</a>
 						</div>
 			
 	</section>
