mary on a cross release

--- a/index.html
+++ b/index.html
@@ -52,11 +52,11 @@
 		<section id="banner">
 			
 			<div class="inner logo">
-				<img src="images/ntts/monarchist_logo.png" alt="" />
+				<img src="images/mary/monarchist_logo.png" alt="" />
 			</div>
 			<div class="content">
-				<img src="images/ntts/hourglass.png" alt="" />
-				<p>New EP “NO TIME TO SHINE” out now</p>
+				<img src="images/mary/cross.png" alt="" />
+				<p>“MARY ON A CROSS” out now</p>
 				<a href="https://songwhip.com/monarchist/no-time-to-shine" target="_blank" class="button fit">Listen</a>
 			</div>
 			<a href="#video" class="more scrolly"></a>
