Update marry on a cross design

--- a/index.html
+++ b/index.html
@@ -54,9 +54,9 @@
 			<div class="inner logo">
 				<img src="images/mary/monarchist_logo.png" alt="" />
 			</div>
-			<div class="content">
-				<img src="images/mary/cross.png" alt="" />
-				<p>“MARY ON A CROSS” out now</p>
+			<div class="content" id="landing">
+				<img id="cross" src="images/mary/cross.png" alt="" />
+				<p id="announcement">“MARY ON A CROSS” out now</p>
 				<a href="https://songwhip.com/monarchist/mary-on-a-cross" target="_blank" class="button fit">Listen</a>
 			</div>
 			<a href="#video" class="more scrolly"></a>
@@ -164,14 +164,19 @@
 			<table>
 				<tbody>
 					<tr>
-						<td class="text-right">Jugendzentrum Henri</td>
-						<td>25.03.2023</td>
-						<td class="text-left">Moers</td>
+						<td class="text-right">RPZ</td>
+						<td>28.11.2023</td>
+						<td class="text-left">Bonn</td>
 					</tr>
 					<tr>
-						<td class="text-right">Indie</td>
-						<td>24.06.2023</td>
-						<td class="text-left">Duisburg</td>
+						<td class="text-right">EMO</td>
+						<td>09.02.2024</td>
+						<td class="text-left">Essen</td>
+					</tr>
+					<tr>
+						<td class="text-right">JZ Hassels</td>
+						<td>01.03.2024</td>
+						<td class="text-left">Düsseldorf</td>
 					</tr>
 				</tbody>
 			</table>
