--- a/index.html
+++ b/index.html
@@ -178,6 +178,11 @@
 						<td>01.03.2024</td>
 						<td class="text-left">Düsseldorf</td>
 					</tr>
+					<tr>
+						<td class="text-right">Bauhaus</td>
+						<td>19.04.2024</td>
+						<td class="text-left">Troisdorf</td>
+					</tr>
 				</tbody>
 			</table>
 			
