finish chameleon release

--- a/index.html
+++ b/index.html
@@ -52,12 +52,11 @@
 		<section id="banner">
 			
 			<div class="inner logo">
-				<img src="images/mary/monarchist_logo.png" alt="" />
+				<img src="images/chameleon/monarchist_logo.png" alt="" />
 			</div>
 			<div class="content" id="landing">
-				<img id="cross" src="images/mary/cross.png" alt="" />
-				<p id="announcement">“MARY ON A CROSS” out now</p>
-				<a href="https://songwhip.com/monarchist/mary-on-a-cross" target="_blank" class="button fit">Listen</a>
+				<p id="announcement">“CHAMELEON” out now</p>
+				<a href="https://songwhip.com/monarchist/chameleon2024" target="_blank" class="button fit">Listen</a>
 			</div>
 			<a href="#video" class="more scrolly"></a>
 		</section>
