--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@
 				<img src="images/chameleon/monarchist_logo.png" alt="" />
 			</div>
 			<div class="content" id="landing">
-				<p id="announcement">“Test” out now</p>
+				<p id="announcement">“Chameleon” out now</p>
 				<a href="https://songwhip.com/monarchist/chameleon2024" target="_blank" class="button fit">Listen</a>
 			</div>
 			<a href="#video" class="more scrolly"></a>
