--- a/index.html
+++ b/index.html
@@ -141,7 +141,7 @@
 					<tr>
 						<td>Gabriel R. Obando</td>
 						<td>René Schmitz</td>
-						<td>Amin Dada</td>
+						<td>Fernando Laranjeiro</td>
 						<td>Nicolai Ehlenbeck</td>
 					</tr>
 					<tr>
@@ -151,7 +151,7 @@
 						<td>Guitars</td>
 					</tr>
 				</table>
-				<p>Heavy riffs, melodic hooks, clean baritone vocals - this is probably the most suitable way to describe the music of German quartet MONARCHIST. Going back to the pioneers of metal music and putting a modern melodic spin on it by injecting influences from the broad spectrum of today's music, all while striving innovation, makes MONARCHIST a true 2020's heavy rock band. Most songs deal with the mannerisms and flaws of mankind, whether in form of social commentary, or self-reflection. For the new generation of fans of Black Sabbath, Metallica, Ghost, Iron Maiden, Rammstein, and more. </p>
+				<p>Heavy riffs, melodic hooks, clean baritone vocals - this is probably the most suitable way to describe the music of German quartet MONARCHIST. Going back to the pioneers of metal music and putting a modern melodic spin on it by injecting influences from the broad spectrum of today's music, all while striving innovation, makes MONARCHIST a true 2020's heavy rock band. For the new generation of fans of Black Sabbath, Metallica, Ghost, Iron Maiden, Rammstein, and more. </p>
 			</div>
 
 		</section>
@@ -181,6 +181,11 @@
 						<td class="text-right">Bauhaus</td>
 						<td>19.04.2024</td>
 						<td class="text-left">Troisdorf</td>
+					</tr>
+					<tr>
+						<td class="text-right">Rock n Pop Spirit</td>
+						<td>15.06.2024</td>
+						<td class="text-left">Düsseldorf</td>
 					</tr>
 				</tbody>
 			</table>
