--- a/index.html
+++ b/index.html
@@ -119,36 +119,36 @@
 				<img src="images/monarchist_photo_square.jpg" alt="" />
 			</div>
 			<div class="content desktop">
-				<p>Heavy riffs, melodic hooks, clean baritone vocals - this is probably the most suitable way to describe the music of German quartet MONARCHIST. Going back to the pioneers of metal music and putting a modern melodic spin on it by injecting influences from the broad spectrum of today's music, all while striving innovation, makes MONARCHIST a true 2020's heavy rock band. Most songs deal with the mannerisms and flaws of mankind, whether in form of social commentary, or self-reflection. For the new generation of fans of Black Sabbath, Metallica, Ghost, Iron Maiden, Rammstein, and more. </p>
+				<p>Heavy riffs, melodic hooks, clean baritone vocals - this is probably the most suitable way to describe the music of German quartet MONARCHIST. Going back to the pioneers of metal music and putting a modern melodic spin on it by injecting influences from the broad spectrum of today's music, all while striving innovation, makes MONARCHIST a true 2020's heavy rock band. For the new generation of fans of Black Sabbath, Metallica, Ghost, Iron Maiden, Rammstein, and more. </p>
 
 				<table>
 					<tr>
+						<td>Nicolai Ehlenbeck</td>
 						<td>Gabriel R. Obando</td>
 						<td>René Schmitz</td>
-						<td>Amin Dada</td>
-						<td>Nicolai Ehlenbeck</td>
+						<td>Fernando Laranjeiro</td>
 					</tr>
 					<tr>
+						<td>Guitars</td>
 						<td>Drums</td>
 						<td>Vocals & Bass</td>
-						<td>Guitars</td>
-						<td>Guitars</td>
+						<td>Guitars</td>	
 					</tr>
 				</table>					
 			</div>
 			<div class="content mobile">
 				<table>
 					<tr>
+						<td>Nicolai Ehlenbeck</td>
 						<td>Gabriel R. Obando</td>
 						<td>René Schmitz</td>
 						<td>Fernando Laranjeiro</td>
-						<td>Nicolai Ehlenbeck</td>
 					</tr>
 					<tr>
+						<td>Guitars</td>
 						<td>Drums</td>
 						<td>Vocals & Bass</td>
-						<td>Guitars</td>
-						<td>Guitars</td>
+						<td>Guitars</td>						
 					</tr>
 				</table>
 				<p>Heavy riffs, melodic hooks, clean baritone vocals - this is probably the most suitable way to describe the music of German quartet MONARCHIST. Going back to the pioneers of metal music and putting a modern melodic spin on it by injecting influences from the broad spectrum of today's music, all while striving innovation, makes MONARCHIST a true 2020's heavy rock band. For the new generation of fans of Black Sabbath, Metallica, Ghost, Iron Maiden, Rammstein, and more. </p>
@@ -163,11 +163,6 @@
 			<table>
 				<tbody>
 					<tr>
-						<td class="text-right">RPZ</td>
-						<td>28.11.2023</td>
-						<td class="text-left">Bonn</td>
-					</tr>
-					<tr>
 						<td class="text-right">EMO</td>
 						<td>09.02.2024</td>
 						<td class="text-left">Essen</td>
@@ -176,6 +171,11 @@
 						<td class="text-right">JZ Hassels</td>
 						<td>01.03.2024</td>
 						<td class="text-left">Düsseldorf</td>
+					</tr>
+					<tr>
+						<td class="text-right">Parkhaus</td>
+						<td>16.03.2024</td>
+						<td class="text-left">Duisburg</td>
 					</tr>
 					<tr>
 						<td class="text-right">Bauhaus</td>
