--- a/index.html
+++ b/index.html
@@ -94,10 +94,10 @@
 				<span class="image">
 					<img src="images/shirt_beige.jpg" alt="" />
 				</span>
-				<a href="https://monarchist.bandcamp.com/merch/days-on-the-sun-shirt-beige" target="_blank">
+				<a href="https://monarchist.bandcamp.com/merch/no-time-to-shine-shirt-dark-blue" target="_blank">
 				
 					<div class="content">
-						<p class="white">Days on the Sun Shirt - White T-Shirt/Shirt</p>
+						<p class="white">NO TIME TO SHINE Shirt</p>
 					</div>
 				</a>
 			</article>
@@ -107,7 +107,7 @@
 				</span>
 				<a href="https://monarchist.bandcamp.com/merch/days-on-the-sun-shirt-black" target="_blank">
 					<div class="content">
-						<p class="black"> Days on the Sun Shirt - Black T-Shirt/Shirt</p>
+						<p class="black"> DAYS ON THE SUN Shirt</p>
 					</div>
 				</a>
 			</article>
