--- a/index.html
+++ b/index.html
@@ -76,7 +76,7 @@
 
 			</video>
 			<div class="content">
-				<p>No Time To Shine - Music Video</p>
+				<p>NO TIME TO SHINE - Music Video</p>
 				<a href="https://www.youtube.com/watch?v=LAAUS2pFVnU" target="_blank" class="button fit">Watch</a>
 						</div>
 			
