--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@
 			</div>
 			<div class="content" id="landing">
 				<p id="announcement">“CHAMELEON” out now</p>
-				<a href="https://songwhip.com/monarchist/chameleon2024" target="_blank" class="button fit">Listen</a>
+				<a href="https://song.link/s/0JSOkRmJsHBu2h4Z1EMYpU" target="_blank" class="button fit">Listen</a>
 			</div>
 			<a href="#video" class="more scrolly"></a>
 		</section>
@@ -186,6 +186,11 @@
 						<td class="text-right">Rock n Pop Spirit</td>
 						<td>15.06.2024</td>
 						<td class="text-left">Düsseldorf</td>
+					</tr>
+					<tr>
+						<td class="text-right">Parkhaus</td>
+						<td>12.10.2024</td>
+						<td class="text-left">Duisburg</td>
 					</tr>
 				</tbody>
 			</table>
