--- a/index.html
+++ b/index.html
@@ -119,7 +119,7 @@
 				<img src="images/monarchist_photo_square.jpg" alt="" />
 			</div>
 			<div class="content desktop">
-				<p>Heavy riffs, melodic hooks, clean baritone vocals - this is probably the most suitable way to describe the music of German quartet MONARCHIST. Going back to the pioneers of metal music and putting a modern melodic spin on it by injecting influences from the broad spectrum of today's music, all while striving innovation, makes MONARCHIST a true 2020's heavy rock band. For the new generation of fans of Black Sabbath, Metallica, Ghost, Iron Maiden, Rammstein, and more. </p>
+				<p>Heavy riffs, catchy melodies, clean baritone vocals - this is probably the best way to describe the music of the Düsseldorf quartet MONARCHIST. The band's captivating style results from a return to simple, effective metal guitar riffs, blended with a modern, melodic approach and a pursuit of uniqueness and innovation. Since their formation in 2018, MONARCHIST has played numerous concerts in NRW (including the Düsseldorf Rock am Bach festival with around 3,000 visitors) and released their self-produced debut album "Cosmos", two EPs and two music videos. The release of MONARCHIST's second album is set for early 2025.</p>
 
 				<table>
 					<tr>
