--- a/index.html
+++ b/index.html
@@ -119,7 +119,8 @@
 				<img src="images/monarchist_photo_square.jpg" alt="" />
 			</div>
 			<div class="content desktop">
-				<p>Heavy riffs, catchy melodies, clean baritone vocals - this is probably the best way to describe the music of the Düsseldorf quartet MONARCHIST. The band's captivating style results from a return to simple, effective metal guitar riffs, blended with a modern, melodic approach and a pursuit of uniqueness and innovation. Since their formation in 2018, MONARCHIST has played numerous concerts in NRW (including the Düsseldorf Rock am Bach festival with around 3,000 visitors) and released their self-produced debut album "Cosmos", two EPs and two music videos. The release of MONARCHIST's second album is set for early 2025.</p>
+				<p>Heavy riffs, catchy melodies, clean baritone vocals - this is probably the best way to describe the music of the Düsseldorf quartet MONARCHIST. The band's captivating style results from a return to simple, effective metal guitar riffs, blended with a modern, melodic approach and a pursuit of uniqueness and innovation.
+					Since their formation in 2018, MONARCHIST has played numerous concerts in NRW (including the Düsseldorf Rock am Bach festival with around 3,000 visitors) and released their self-produced debut album "Cosmos", two EPs and two music videos. The release of MONARCHIST's second album is set for early 2025.</p>
 
 				<table>
 					<tr>
