--- a/index.html
+++ b/index.html
@@ -55,8 +55,8 @@
 				<img src="images/chameleon/monarchist_logo.png" alt="" />
 			</div>
 			<div class="content" id="landing">
-				<p id="announcement">“CHAMELEON” out now</p>
-				<a href="https://song.link/s/0JSOkRmJsHBu2h4Z1EMYpU" target="_blank" class="button fit">Listen</a>
+				<p id="announcement">“ASTRONAUT” out now</p>
+				<a href="https://song.link/s/3zYbzS2U3FwLrLBA2cANKj" target="_blank" class="button fit">Listen</a>
 			</div>
 			<a href="#video" class="more scrolly"></a>
 		</section>
