--- a/index.html
+++ b/index.html
@@ -76,8 +76,8 @@
 
 			</video>
 			<div class="content">
-				<p>NO TIME TO SHINE - Music Video</p>
-				<a href="https://www.youtube.com/watch?v=LAAUS2pFVnU" target="_blank" class="button fit">Watch</a>
+				<p>ASTRONAUT - Music Video</p>
+				<a href="https://www.youtube.com/watch?v=fA0DlPxL8lM" target="_blank" class="button fit">Watch</a>
 						</div>
 			
 	</section>
