--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@
 				<img src="images/chameleon/monarchist_logo.png" alt="" />
 			</div>
 			<div class="content" id="landing">
-				<p id="announcement">“ASTRONAUT” out now</p>
+				<p id="announcement">“ASTRONAUT” out now!</p>
 				<a href="https://song.link/s/3zYbzS2U3FwLrLBA2cANKj" target="_blank" class="button fit">Listen</a>
 			</div>
 			<a href="#video" class="more scrolly"></a>
