--- a/index.html
+++ b/index.html
@@ -193,6 +193,11 @@
 						<td>12.10.2024</td>
 						<td class="text-left">Duisburg</td>
 					</tr>
+					<tr>
+						<td class="text-right">Haus Spilles</td>
+						<td>07.12.2024</td>
+						<td class="text-left">Düsseldorf</td>
+					</tr>
 				</tbody>
 			</table>
 			
