--- a/index.html
+++ b/index.html
@@ -120,20 +120,20 @@
 			</div>
 			<div class="content desktop">
 				<p>Heavy riffs, catchy melodies, clean baritone vocals - this is probably the best way to describe the music of the Düsseldorf quartet MONARCHIST. The band's captivating style results from a return to simple, effective metal guitar riffs, blended with a modern, melodic approach and a pursuit of uniqueness and innovation.
-					Since their formation in 2018, MONARCHIST has played numerous concerts in NRW (including the Düsseldorf Rock am Bach festival with around 3,000 visitors) and released their debut album "Cosmos", two EPs and three music videos. The release of MONARCHIST's second album is set for early 2025.</p>
+					Since their formation in 2018, MONARCHIST has played numerous concerts in NRW (including the Düsseldorf Rock am Bach festival with around 3,000 visitors) and released their debut album "Cosmos", two EPs and three music videos. The release of MONARCHIST's second album is set for early spring 2025.</p>
 
 				<table>
 					<tr>
 						<td>Nicolai Ehlenbeck</td>
-						<td>Gabriel R. Obando</td>
-						<td>René Schmitz</td>
 						<td>Fernando Laranjeiro</td>
+						<td>René Schmitz</td>
+						<td>Theo Kerstan</td>
 					</tr>
 					<tr>
 						<td>Guitars</td>
-						<td>Drums</td>
+						<td>Guitars</td>
 						<td>Vocals & Bass</td>
-						<td>Guitars</td>	
+						<td>Drums</td>	
 					</tr>
 				</table>					
 			</div>
@@ -141,18 +141,18 @@
 				<table>
 					<tr>
 						<td>Nicolai Ehlenbeck</td>
-						<td>Gabriel R. Obando</td>
-						<td>René Schmitz</td>
 						<td>Fernando Laranjeiro</td>
+						<td>René Schmitz</td>
+						<td>Theo Kerstan</td>
 					</tr>
 					<tr>
 						<td>Guitars</td>
-						<td>Drums</td>
+						<td>Guitars</td>
 						<td>Vocals & Bass</td>
-						<td>Guitars</td>						
+						<td>Drums</td>						
 					</tr>
 				</table>
-				<p>Heavy riffs, catchy melodies, clean baritone vocals - this is probably the best way to describe the music of the Düsseldorf quartet MONARCHIST. The band's captivating style results from a return to simple, effective metal guitar riffs, blended with a modern, melodic approach and a pursuit of uniqueness and innovation. Since their formation in 2018, MONARCHIST has played numerous concerts in NRW (including the Düsseldorf Rock am Bach festival with around 3,000 visitors) and released their self-produced debut album "Cosmos", two EPs and two music videos. The release of MONARCHIST's second album is set for early 2025. </p>
+				<p>Heavy riffs, catchy melodies, clean baritone vocals - this is probably the best way to describe the music of the Düsseldorf quartet MONARCHIST. The band's captivating style results from a return to simple, effective metal guitar riffs, blended with a modern, melodic approach and a pursuit of uniqueness and innovation. Since their formation in 2018, MONARCHIST has played numerous concerts in NRW (including the Düsseldorf Rock am Bach festival with around 3,000 visitors) and released their self-produced debut album "Cosmos", two EPs and three music videos. The release of MONARCHIST's second album is set for early spring 2025. </p>
 			</div>
 
 		</section>
@@ -164,39 +164,24 @@
 			<table>
 				<tbody>
 					<tr>
-						<td class="text-right">EMO</td>
-						<td>09.02.2024</td>
-						<td class="text-left">Essen</td>
+						<td class="text-right">Rockin' Rooster</td>
+						<td>08.02.2025</td>
+						<td class="text-left">Haan</td>
 					</tr>
 					<tr>
-						<td class="text-right">JZ Hassels</td>
-						<td>01.03.2024</td>
+						<td class="text-right">Jugendraum Hassels</td>
+						<td>14.03.2025</td>
 						<td class="text-left">Düsseldorf</td>
 					</tr>
 					<tr>
-						<td class="text-right">Parkhaus</td>
-						<td>16.03.2024</td>
-						<td class="text-left">Duisburg</td>
+						<td class="text-right">U27</td>
+						<td>28.03.2025</td>
+						<td class="text-left">Bochum</td>
 					</tr>
 					<tr>
-						<td class="text-right">Bauhaus</td>
-						<td>19.04.2024</td>
-						<td class="text-left">Troisdorf</td>
-					</tr>
-					<tr>
-						<td class="text-right">Rock n Pop Spirit</td>
-						<td>15.06.2024</td>
-						<td class="text-left">Düsseldorf</td>
-					</tr>
-					<tr>
-						<td class="text-right">Parkhaus</td>
-						<td>12.10.2024</td>
-						<td class="text-left">Duisburg</td>
-					</tr>
-					<tr>
-						<td class="text-right">Haus Spilles</td>
-						<td>07.12.2024</td>
-						<td class="text-left">Düsseldorf</td>
+						<td class="text-right">Spunk</td>
+						<td>10.05.2025</td>
+						<td class="text-left">Gelsenkirchen</td>
 					</tr>
 				</tbody>
 			</table>
