--- a/index.html
+++ b/index.html
@@ -55,8 +55,8 @@
 				<img src="images/chameleon/monarchist_logo.png" alt="" />
 			</div>
 			<div class="content" id="landing">
-				<p id="announcement">“ASTRONAUT” out now!</p>
-				<a href="https://song.link/s/3zYbzS2U3FwLrLBA2cANKj" target="_blank" class="button fit">Listen</a>
+				<p id="announcement">“LIFE NOIR” - The new album, out on April 24th!</p>
+				<a href="https://song.link/s/3zYbzS2U3FwLrLBA2cANKj" target="_blank" class="button fit">Pre-save</a>
 			</div>
 			<a href="#video" class="more scrolly"></a>
 		</section>
@@ -119,40 +119,43 @@
 				<img src="images/monarchist_photo_square.jpg" alt="" />
 			</div>
 			<div class="content desktop">
-				<p>Heavy riffs, catchy melodies, clean baritone vocals - this is probably the best way to describe the music of the Düsseldorf quartet MONARCHIST. The band's captivating style results from a return to simple, effective metal guitar riffs, blended with a modern, melodic approach and a pursuit of uniqueness and innovation.
-					Since their formation in 2018, MONARCHIST has played numerous concerts in NRW (including the Düsseldorf Rock am Bach festival with around 3,000 visitors) and released their debut album "Cosmos", two EPs and three music videos. The release of MONARCHIST's second album is set for early spring 2025.</p>
+				<p>A Symbiosis of Tradition and Modernity in Metal - MONARCHIST delivers a captivating blend of powerful guitar riffs, memorable melodies, and charismatic baritone vocals. The Düsseldorf-based quartet combines the energy of classic heavy metal and hard rock with modern, melodic elements, creating a sound that feels both familiar and refreshingly new. Driven by their pursuit of innovation and their ambition to carve out a unique musical niche, MONARCHIST merges the best of past decades with a contemporary, distinctive style. Clear song structures, thoughtful dynamics, and massive hooks ensure that their songs leave a lasting impression.
+					In the past 3 years,  the band has played numerous concerts across North Rhine-Westphalia and gained attention with their debut album “Cosmos”, two EPs, and three music videos.
+					The release of MONARCHIST’s second album "LIFE NOIR" is set for April 24th.</p>
 
 				<table>
 					<tr>
-						<td>Nicolai Ehlenbeck</td>
 						<td>Fernando Laranjeiro</td>
 						<td>René Schmitz</td>
 						<td>Theo Kerstan</td>
+						<td>Nicolai Ehlenbeck</td>
 					</tr>
 					<tr>
 						<td>Guitars</td>
-						<td>Guitars</td>
 						<td>Vocals & Bass</td>
-						<td>Drums</td>	
+						<td>Drums</td>
+						<td>Guitars</td>
 					</tr>
 				</table>					
 			</div>
 			<div class="content mobile">
 				<table>
 					<tr>
-						<td>Nicolai Ehlenbeck</td>
 						<td>Fernando Laranjeiro</td>
 						<td>René Schmitz</td>
 						<td>Theo Kerstan</td>
+						<td>Nicolai Ehlenbeck</td>
 					</tr>
 					<tr>
 						<td>Guitars</td>
-						<td>Guitars</td>
 						<td>Vocals & Bass</td>
-						<td>Drums</td>						
+						<td>Drums</td>
+						<td>Guitars</td>				
 					</tr>
 				</table>
-				<p>Heavy riffs, catchy melodies, clean baritone vocals - this is probably the best way to describe the music of the Düsseldorf quartet MONARCHIST. The band's captivating style results from a return to simple, effective metal guitar riffs, blended with a modern, melodic approach and a pursuit of uniqueness and innovation. Since their formation in 2018, MONARCHIST has played numerous concerts in NRW (including the Düsseldorf Rock am Bach festival with around 3,000 visitors) and released their self-produced debut album "Cosmos", two EPs and three music videos. The release of MONARCHIST's second album is set for early spring 2025. </p>
+				<p>A Symbiosis of Tradition and Modernity in Metal - MONARCHIST delivers a captivating blend of powerful guitar riffs, memorable melodies, and charismatic baritone vocals. The Düsseldorf-based quartet combines the energy of classic heavy metal and hard rock with modern, melodic elements, creating a sound that feels both familiar and refreshingly new. Driven by their pursuit of innovation and their ambition to carve out a unique musical niche, MONARCHIST merges the best of past decades with a contemporary, distinctive style. Clear song structures, thoughtful dynamics, and massive hooks ensure that their songs leave a lasting impression.
+					In the past 3 years,  the band has played numerous concerts across North Rhine-Westphalia and gained attention with their debut album “Cosmos”, two EPs, and three music videos.
+					The release of MONARCHIST’s second album "LIFE NOIR" is set for April 24th. </p>
 			</div>
 
 		</section>
@@ -179,9 +182,24 @@
 						<td class="text-left">Bochum</td>
 					</tr>
 					<tr>
+						<td class="text-right">Secret6</td>
+						<td>26.04.2025</td>
+						<td class="text-left">Düsseldorf</td>
+					</tr>
+					<tr>
 						<td class="text-right">Spunk</td>
 						<td>10.05.2025</td>
 						<td class="text-left">Gelsenkirchen</td>
+					</tr>
+					<tr>
+						<td class="text-right">Surrogate Festival</td>
+						<td>02.08.2025</td>
+						<td class="text-left">Kranenburg</td>
+					</tr>
+					<tr>
+						<td class="text-right">Todsünde Heimatfest</td>
+						<td>27.08.2025</td>
+						<td class="text-left">Dormagen</td>
 					</tr>
 				</tbody>
 			</table>
