--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@
 			</div>
 			<div class="content" id="landing">
 				<p id="announcement">“LIFE NOIR” - The new album, out on April 24th!</p>
-				<a href="https://song.link/s/3zYbzS2U3FwLrLBA2cANKj" target="_blank" class="button fit">Pre-save</a>
+				<a href="https://distrokid.com/hyperfollow/monarchist/life-noir" target="_blank" class="button fit">Pre-save</a>
 			</div>
 			<a href="#video" class="more scrolly"></a>
 		</section>
