--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@
 				<img src="images/chameleon/monarchist_logo.png" alt="" />
 			</div>
 			<div class="content" id="landing">
-				<p id="announcement">“LIFE NOIR” - The new album, out on April 24th!</p>
+				<p id="announcement">“LIFE NOIR” - The New Album, out on April 24th!</p>
 				<a href="https://distrokid.com/hyperfollow/monarchist/life-noir" target="_blank" class="button fit">Pre-save</a>
 			</div>
 			<a href="#video" class="more scrolly"></a>
