--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@
 				<img src="images/chameleon/monarchist_logo.png" alt="" />
 			</div>
 			<div class="content" id="landing">
-				<p id="announcement">“LIFE NOIR” - The New Album, out on April 24th!</p>
+				<p id="announcement">“LIFE NOIR” - The New Album. Out on April 24th!</p>
 				<a href="https://distrokid.com/hyperfollow/monarchist/life-noir" target="_blank" class="button fit">Pre-save</a>
 			</div>
 			<a href="#video" class="more scrolly"></a>
@@ -105,9 +105,9 @@
 				<span class="image">
 					<img src="images/shirt_black.jpg" alt="" />
 				</span>
-				<a href="https://monarchist.bandcamp.com/merch/days-on-the-sun-shirt-black" target="_blank">
+				<a href="https://monarchist.bandcamp.com/merch/astronaut-shirt" target="_blank">
 					<div class="content">
-						<p class="black"> DAYS ON THE SUN Shirt</p>
+						<p class="black"> ASTRONAUT Shirt</p>
 					</div>
 				</a>
 			</article>
