--- a/index.html
+++ b/index.html
@@ -92,22 +92,22 @@
 			</header>
 			<article class="style1">
 				<span class="image">
+					<img src="images/shirt_black.jpg" alt="" />
+				</span>
+				<a href="https://monarchist.bandcamp.com/merch/astronaut-shirt" target="_blank">
+					<div class="content">
+						<p class="black"> ASTRONAUT Shirt</p>
+					</div>
+				</a>
+			</article>
+			<article class="style1">
+				<span class="image">
 					<img src="images/shirt_beige.jpg" alt="" />
 				</span>
 				<a href="https://monarchist.bandcamp.com/merch/no-time-to-shine-shirt-dark-blue" target="_blank">
 				
 					<div class="content">
 						<p class="white">NO TIME TO SHINE Shirt</p>
-					</div>
-				</a>
-			</article>
-			<article class="style1">
-				<span class="image">
-					<img src="images/shirt_black.jpg" alt="" />
-				</span>
-				<a href="https://monarchist.bandcamp.com/merch/astronaut-shirt" target="_blank">
-					<div class="content">
-						<p class="black"> ASTRONAUT Shirt</p>
 					</div>
 				</a>
 			</article>
@@ -121,7 +121,7 @@
 			<div class="content desktop">
 				<p>A Symbiosis of Tradition and Modernity in Metal - MONARCHIST delivers a captivating blend of powerful guitar riffs, memorable melodies, and charismatic baritone vocals. The Düsseldorf-based quartet combines the energy of classic heavy metal and hard rock with modern, melodic elements, creating a sound that feels both familiar and refreshingly new. Driven by their pursuit of innovation and their ambition to carve out a unique musical niche, MONARCHIST merges the best of past decades with a contemporary, distinctive style. Clear song structures, thoughtful dynamics, and massive hooks ensure that their songs leave a lasting impression.
 					In the past 3 years,  the band has played numerous concerts across North Rhine-Westphalia and gained attention with their debut album “Cosmos”, two EPs, and three music videos.
-					The release of MONARCHIST’s second album "LIFE NOIR" is set for April 24th.</p>
+					MONARCHIST’s second album "LIFE NOIR" will be released on April 24th — on Vinyl, CD and all streaming platforms.</p>
 
 				<table>
 					<tr>
