--- a/index.html
+++ b/index.html
@@ -55,8 +55,8 @@
 				<img src="images/chameleon/monarchist_logo.png" alt="" />
 			</div>
 			<div class="content" id="landing">
-				<p id="announcement">“LIFE NOIR” - The New Album. Out on April 24th!</p>
-				<a href="https://distrokid.com/hyperfollow/monarchist/life-noir" target="_blank" class="button fit">Pre-save</a>
+				<p id="announcement">“LIFE NOIR” - The New Album. Out Now!</p>
+				<a href="https://song.link/lifenoir" target="_blank" class="button fit">Listen now</a>
 			</div>
 			<a href="#video" class="more scrolly"></a>
 		</section>
@@ -167,23 +167,13 @@
 			<table>
 				<tbody>
 					<tr>
-						<td class="text-right">Rockin' Rooster</td>
-						<td>08.02.2025</td>
-						<td class="text-left">Haan</td>
-					</tr>
-					<tr>
-						<td class="text-right">Jugendraum Hassels</td>
-						<td>14.03.2025</td>
+						<td class="text-right">Secret6</td>
+						<td>26.04.2025</td>
 						<td class="text-left">Düsseldorf</td>
 					</tr>
 					<tr>
-						<td class="text-right">U27</td>
-						<td>28.03.2025</td>
-						<td class="text-left">Bochum</td>
-					</tr>
-					<tr>
-						<td class="text-right">Secret6</td>
-						<td>26.04.2025</td>
+						<td class="text-right">Café Freiraum der HSD</td>
+						<td>09.05.2025</td>
 						<td class="text-left">Düsseldorf</td>
 					</tr>
 					<tr>
@@ -197,8 +187,13 @@
 						<td class="text-left">Kranenburg</td>
 					</tr>
 					<tr>
+						<td class="text-right">Parkhaus</td>
+						<td>26.09.2025</td>
+						<td class="text-left">Duisburg</td>
+					</tr>
+					<tr>
 						<td class="text-right">Todsünde Heimatfest</td>
-						<td>27.08.2025</td>
+						<td>27.09.2025</td>
 						<td class="text-left">Dormagen</td>
 					</tr>
 				</tbody>
