--- a/index.html
+++ b/index.html
@@ -107,7 +107,7 @@
 				<a href="https://monarchist.bandcamp.com/merch/life-noir-long-sleeve" target="_blank">
 				
 					<div class="content">
-						<p class="white">NO TIME TO SHINE Shirt</p>
+						<p class="white">LIFE NOIR Longsleeve</p>
 					</div>
 				</a>
 			</article>
