--- a/index.html
+++ b/index.html
@@ -154,8 +154,7 @@
 					</tr>
 				</table>
 				<p>A Symbiosis of Tradition and Modernity in Metal - MONARCHIST delivers a captivating blend of powerful guitar riffs, memorable melodies, and charismatic baritone vocals. The Düsseldorf-based quartet combines the energy of classic heavy metal and hard rock with modern, melodic elements, creating a sound that feels both familiar and refreshingly new. Driven by their pursuit of innovation and their ambition to carve out a unique musical niche, MONARCHIST merges the best of past decades with a contemporary, distinctive style. Clear song structures, thoughtful dynamics, and massive hooks ensure that their songs leave a lasting impression.
-					In the past 3 years,  the band has played numerous concerts across North Rhine-Westphalia and gained attention with their debut album “Cosmos”, two EPs, and three music videos.
-					The release of MONARCHIST’s second album "LIFE NOIR" is set for April 24th. </p>
+					In the past 3 years, the band has played numerous concerts across North Rhine-Westphalia and gained attention with their two albums “Cosmos” and “Life Noir”, two EPs, and four music videos.</p>
 			</div>
 
 		</section>
