--- a/index.html
+++ b/index.html
@@ -107,7 +107,27 @@
 				<a href="https://monarchist.bandcamp.com/merch/life-noir-long-sleeve" target="_blank">
 				
 					<div class="content">
-						<p class="white">LIFE NOIR Longsleeve</p>
+						<p class="black">LIFE NOIR Longsleeve</p>
+					</div>
+				</a>
+			</article>
+			<article class="style1">
+				<span class="image">
+					<img src="images/shirt_black.jpg" alt="" />
+				</span>
+				<a href="https://monarchist.bandcamp.com/album/life-noir" target="_blank">
+					<div class="content">
+						<p class="black"> LIFE NOIR Vinyl</p>
+					</div>
+				</a>
+			</article>
+			<article class="style1">
+				<span class="image">
+					<img src="images/shirt_black.jpg" alt="" />
+				</span>
+				<a href="https://monarchist.bandcamp.com/album/life-noir" target="_blank">
+					<div class="content">
+						<p class="black"> LIFE NOIR CD</p>
 					</div>
 				</a>
 			</article>
@@ -121,7 +141,7 @@
 			<div class="content desktop">
 				<p>A Symbiosis of Tradition and Modernity in Metal - MONARCHIST delivers a captivating blend of powerful guitar riffs, memorable melodies, and charismatic baritone vocals. The Düsseldorf-based quartet combines the energy of classic heavy metal and hard rock with modern, melodic elements, creating a sound that feels both familiar and refreshingly new. Driven by their pursuit of innovation and their ambition to carve out a unique musical niche, MONARCHIST merges the best of past decades with a contemporary, distinctive style. Clear song structures, thoughtful dynamics, and massive hooks ensure that their songs leave a lasting impression.
 					In the past 3 years,  the band has played numerous concerts across North Rhine-Westphalia and gained attention with their debut album “Cosmos”, two EPs, and three music videos.
-					MONARCHIST’s second album "LIFE NOIR" will be released on April 24th — on Vinyl, CD and all streaming platforms.</p>
+					MONARCHIST’s second album "LIFE NOIR" was released in April — on Vinyl, CD and all streaming platforms.</p>
 
 				<table>
 					<tr>
@@ -165,21 +185,6 @@
 			</header>
 			<table>
 				<tbody>
-					<tr>
-						<td class="text-right">Secret6</td>
-						<td>26.04.2025</td>
-						<td class="text-left">Düsseldorf</td>
-					</tr>
-					<tr>
-						<td class="text-right">Café Freiraum der HSD</td>
-						<td>09.05.2025</td>
-						<td class="text-left">Düsseldorf</td>
-					</tr>
-					<tr>
-						<td class="text-right">Spunk</td>
-						<td>10.05.2025</td>
-						<td class="text-left">Gelsenkirchen</td>
-					</tr>
 					<tr>
 						<td class="text-right">Surrogate Festival</td>
 						<td>02.08.2025</td>
