--- a/index.html
+++ b/index.html
@@ -113,7 +113,7 @@
 			</article>
 			<article class="style1">
 				<span class="image">
-					<img src="images/shirt_black.jpg" alt="" />
+					<img src="images/Limited Vinyl Mockup p1 NO PRICE.png" alt="" />
 				</span>
 				<a href="https://monarchist.bandcamp.com/album/life-noir" target="_blank">
 					<div class="content">
@@ -123,7 +123,7 @@
 			</article>
 			<article class="style1">
 				<span class="image">
-					<img src="images/shirt_black.jpg" alt="" />
+					<img src="images/Life Noir CD Mockup schräg.png" alt="" />
 				</span>
 				<a href="https://monarchist.bandcamp.com/album/life-noir" target="_blank">
 					<div class="content">
