--- a/index.html
+++ b/index.html
@@ -200,6 +200,11 @@
 						<td>27.09.2025</td>
 						<td class="text-left">Dormagen</td>
 					</tr>
+					<tr>
+						<td class="text-right">EMOt</td>
+						<td>21.02.2026</td>
+						<td class="text-left">Essen</td>
+					</tr>
 				</tbody>
 			</table>
 			
