--- a/index.html
+++ b/index.html
@@ -140,8 +140,7 @@
 			</div>
 			<div class="content desktop">
 				<p>A Symbiosis of Tradition and Modernity in Metal - MONARCHIST delivers a captivating blend of powerful guitar riffs, memorable melodies, and charismatic baritone vocals. The Düsseldorf-based quartet combines the energy of classic heavy metal and hard rock with modern, melodic elements, creating a sound that feels both familiar and refreshingly new. Driven by their pursuit of innovation and their ambition to carve out a unique musical niche, MONARCHIST merges the best of past decades with a contemporary, distinctive style. Clear song structures, thoughtful dynamics, and massive hooks ensure that their songs leave a lasting impression.
-					In the past 3 years,  the band has played numerous concerts across North Rhine-Westphalia and gained attention with their debut album “Cosmos”, two EPs, and three music videos.
-					MONARCHIST’s second album "LIFE NOIR" was released in April — on Vinyl, CD and all streaming platforms.</p>
+					In the past 3 years,  the band has played numerous concerts across North Rhine-Westphalia and gained attention with their two albums “Cosmos” and “Life Noir”, two EPs, and four music videos.</p>
 
 				<table>
 					<tr>
@@ -196,12 +195,7 @@
 						<td class="text-left">Duisburg</td>
 					</tr>
 					<tr>
-						<td class="text-right">Todsünde Heimatfest</td>
-						<td>27.09.2025</td>
-						<td class="text-left">Dormagen</td>
-					</tr>
-					<tr>
-						<td class="text-right">EMOt</td>
+						<td class="text-right">EMO</td>
 						<td>21.02.2026</td>
 						<td class="text-left">Essen</td>
 					</tr>
